--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # Recursive ignore exclusion
-vscode/*
-!vscode/.gitignore
-!vscode/README.md
-!vscode/data
-vscode/data/*
-!vscode/data/user-data
-vscode/data/user-data/*
-!vscode/data/user-data/User
-vscode/data/user-data/User/globalStorage/
-vscode/data/user-data/User/workspaceStorage/
-vscode/data/user-data/User/History/
+!.gitignore
+!README.md
+!data
+data/*
+!data/user-data
+data/user-data/*
+!data/user-data/User
+data/user-data/User/globalStorage/
+data/user-data/User/workspaceStorage/
+data/user-data/User/History/
