Changes the colorscheme config

--- a/data/user-data/User/settings.json
+++ b/data/user-data/User/settings.json
@@ -1,4 +1,115 @@
 {
+  "editor.tokenColorCustomizations": {
+    "textMateRules": [
+      {
+        "scope": [
+          "comment",
+          "comment.block",
+          "comment.block.documentation",
+          "comment.line",
+          "constant",
+          "constant.character",
+          "constant.character.escape",
+          "constant.numeric",
+          "constant.numeric.integer",
+          "constant.numeric.float",
+          "constant.numeric.hex",
+          "constant.numeric.octal",
+          "constant.other",
+          "constant.regexp",
+          "constant.rgb-value",
+          "emphasis",
+          "entity",
+          "entity.name",
+          "entity.name.class",
+          "entity.name.function",
+          "entity.name.method",
+          "entity.name.section",
+          "entity.name.selector",
+          "entity.name.tag",
+          "entity.name.type",
+          "entity.other",
+          "entity.other.attribute-name",
+          "entity.other.inherited-class",
+          "invalid",
+          "invalid.deprecated",
+          "invalid.illegal",
+          "keyword",
+          "keyword.control",
+          "keyword.operator",
+          "keyword.operator.new",
+          "keyword.operator.assignment",
+          "keyword.operator.arithmetic",
+          "keyword.operator.logical",
+          "keyword.other",
+          "markup",
+          "markup.bold",
+          "markup.changed",
+          "markup.deleted",
+          "markup.heading",
+          "markup.inline.raw",
+          "markup.inserted",
+          "markup.italic",
+          "markup.list",
+          "markup.list.numbered",
+          "markup.list.unnumbered",
+          "markup.other",
+          "markup.quote",
+          "markup.raw",
+          "markup.underline",
+          "markup.underline.link",
+          "meta",
+          "meta.block",
+          "meta.cast",
+          "meta.class",
+          "meta.function",
+          "meta.function-call",
+          "meta.preprocessor",
+          "meta.return-type",
+          "meta.selector",
+          "meta.tag",
+          "meta.type.annotation",
+          "meta.type",
+          "punctuation.definition.string.begin",
+          "punctuation.definition.string.end",
+          "punctuation.separator",
+          "punctuation.separator.continuation",
+          "punctuation.terminator",
+          "storage",
+          "storage.modifier",
+          "storage.type",
+          "string",
+          "string.interpolated",
+          "string.other",
+          "string.quoted",
+          "string.quoted.double",
+          "string.quoted.other",
+          "string.quoted.single",
+          "string.quoted.triple",
+          "string.regexp",
+          "string.unquoted",
+          "strong",
+          "support",
+          "support.class",
+          "support.constant",
+          "support.function",
+          "support.other",
+          "support.type",
+          "support.type.property-name",
+          "support.variable",
+          "variable",
+          "variable.language",
+          "variable.name",
+          "variable.other",
+          "variable.other.readwrite",
+          "variable.parameter"
+        ],
+        "settings": {
+          "fontStyle": ""
+        }
+      }
+    ]
+  },
   "telemetry.enableTelemetry": false,
   "terminal.integrated.rendererType": "dom",
   "files.autoSave": "off",
@@ -35,7 +146,7 @@
     "editor.wordBasedSuggestions": false,
     "editor.formatOnSave": false,
     "editor.formatOnPaste": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "editor.suggest.showStatusBar": true,
   "workbench.settings.openDefaultSettings": true,
@@ -48,7 +159,7 @@
   "prettier.jsxSingleQuote": true,
   "prettier.singleQuote": true,
   "terminal.integrated.defaultProfile.windows": "PowerShell",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.defaultFormatter": "ms-vscode.vscode-typescript-tslint-plugin",
   "prettier.useEditorConfig": false,
   "terminal.integrated.scrollback": 10000,
   "oneDarkPro.bold": true,
@@ -536,7 +647,7 @@
     "editor.defaultFormatter": "tamasfe.even-better-toml"
   },
   "vscode-neovim.textDecorationsAtTop": true,
-  "workbench.colorTheme": "Atom One Dark",
+  "workbench.colorTheme": "One Dark Pro",
   "window.commandCenter": false,
   "vim.neovimUseConfigFile": true,
   "vim.enableNeovim": true,
@@ -561,7 +672,23 @@
   "todohighlight.include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "**/*.html", "**/*.php", "**/*.css", "**/*.scss"],
   "vscode-devtools-for-chrome.chromePath": "C:\\Users\\adinelson.bruhmuller.MOVTECH\\scoop\\apps\\opera-gx\\98.0.4759.22\\98.0.4759.22\\opera.exe",
   "vscode-devtools-for-chrome.port": 4200,
-  "rust-analyzer.server.path": "C:\\Users\\adinelson.bruhmuller.MOVTECH\\scoopapps\\rustup\\current\\.cargo\\bin\\rust-analyzer.exe"
+  "rust-analyzer.server.path": "C:\\Users\\adinelson.bruhmuller.MOVTECH\\scoopapps\\rustup\\current\\.cargo\\bin\\rust-analyzer.exe",
+  "editor.lineNumbers": "relative",
+  "editor.fontWeight": "normal",
+"editor.fontLigatures": false,
+// "javascript.format.insertSpaceAfterConstructor": true,
+// "typescript.format.insertSpaceAfterConstructor": true,
+// "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
+// "typescript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
+// "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+// "typescript.format.insertSpaceBeforeFunctionParenthesis": true,
+// "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+// "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+// "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
+// "javascript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
+// "javascript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
+// "typescript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
+// "typescript.format.insertSpaceAfterTypeAssertion": true,
   /*"vscode-neovim.neovimExecutablePaths.win32": "C:\\tools\\neovim\\Neovim\\bin\\nvim.exe ",
 
 		"vim.leader": "<Space>",
